# libcipher

./: CMakeLists.txt  hill_cipher.cpp  hill_cipher.hxx  hill_test.cpp  includes.hxx  math.hxx  matrix.hxx  matrix_test.cpp  matrix_test.hxx  misc.hxx  ngram.hxx  ngram_test.cpp  random.h  readme.md  terminal.h  vectors.hxx
affine/: affine.hxx  affine_crack.cpp  affine_test.cpp  affinecracker.hxx
caesar/: caesar.hxx  caesar_test.cpp
hill/: hill_cipher.hxx  hill_test.cpp
